--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Real-Estate App</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
